Weight tools do not mirror properly in vertex selection mask mode. #36246

Closed
opened 2013-07-22 12:36:06 +02:00 by Gaia Clary · 4 comments
Member

%%%--- Operating System, Graphics card ---

- Blender version with error, and version that worked ---


- Short description of error ---

The following tools do not affect the mirrored vertices when used with
vertex mask selection mode and when the "X" Mirror option is enabled:

  • Invert
  • Clean
  • Levels
  • Blend

However it would make sense to take the x-mirror flag into account for these tools
when in vertex selection mask mode

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Take any weighted mesh object with perfect X-Symmetry in the mesh.

  • Go to WeightPaint mode

  • Enable the X Mirror Option

  • Enable Vertex Selection Mask

  • Select one or more vertices

  • Apply the above mentioned tools

Only the selected verts get affected, but not their mirrored counterparts.
I believe this should happen for consistency with doing manual weighting
of single verts and with weight painting which both support x-mirror.%%%

%%%--- Operating System, Graphics card --- - Blender version with error, and version that worked --- - Short description of error --- The following tools do not affect the mirrored vertices when used with vertex mask selection mode and when the "X" Mirror option is enabled: - Invert - Clean - Levels - Blend However it would make sense to take the x-mirror flag into account for these tools when in vertex selection mask mode - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Take any weighted mesh object with perfect X-Symmetry in the mesh. - Go to WeightPaint mode - Enable the X Mirror Option - Enable Vertex Selection Mask - Select one or more vertices - Apply the above mentioned tools Only the selected verts get affected, but not their mirrored counterparts. I believe this should happen for consistency with doing manual weighting of single verts and with weight painting which both support x-mirror.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Agree this should be improved, your suggestions seem reasonable however this is more of a TODO.

Even so, leaving open since its not such a large task and nice to have working for next release.%%%

%%%Agree this should be improved, your suggestions seem reasonable however this is more of a TODO. Even so, leaving open since its not such a large task and nice to have working for next release.%%%

%%%fixed r60186.%%%

%%%fixed r60186.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36246
No description provided.