fix [#36246] Weight tools do not mirror properly in vertex selection mask mode.

Weight mirror is now supported by invert/clean/levels/blend.